# usdfg-site

./: .env.example  .firebaserc  .gitignore  ACCESS_COMPLETED_TOURNAMENT.md  ADMIN_SETUP_GUIDE.md  ADMIN_SYSTEMS_INVENTORY.md  ARENAROUTE_AUDIT.md  AUTOMATED_PAYOUT_SETUP.md  AUTOMATED_PAYOUT_SUMMARY.md  AUTOMATED_TESTING.md  Anchor.toml  CHALLENGE_CREATION_AND_FEE_FLOW.md  CHALLENGE_FLOW_IMPLEMENTATION.md  CHECK_DELETED_TOURNAMENT.md  CLAIM_PRIZE_SYSTEM_VERIFIED.md  CLOUDFLARE_CACHE_FIX.md  CLOUDFLARE_DOMAIN_SETUP_GUIDE.md  CLOUDFLARE_PAGES_CUSTOM_DOMAIN_FIX.md  CNAME  CONTRACT_FOR_PLAYGROUND.rs  CONTRACT_FRONTEND_VERIFICATION.md  CONTRACT_SECURITY_ANALYSIS.md  CONTRACT_VERIFICATION.md  COPY_PASTE_CONTRACT.rs  COPY_THIS_TO_PLAYGROUND.rs  DEAD_CODE_REPORT.md  DEBUG_INSTRUCTIONS.md  DEEPLINK_SOURCE_VERIFICATION.md  DEEPLINK_VERIFICATION_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  DEPLOY_CONTRACT_FIX_PRIZE_CLAIMS.md  DEPLOY_FIRESTORE_RULES.md  DEPLOY_NEW_CONTRACT.md  DEPLOY_PLATFORM_FEES.md  DEPLOY_SECURITY_FIX.md  DEPLOY_SMART_CONTRACT.md  DEPLOY_WITH_PLAYGROUND.md  DISCRIMINATOR_FIX.md  (+121 more)
.firebase/: hosting.ZGlzdA.cache
client/: index.html
cloudflare/: access.config.json
docs/: BACKLOG.md  VOICE_SYSTEM_INVENTORY.md
functions/: .gitignore  _middleware.ts  package-lock.json  package.json  tsconfig.json
programs/usdfg_smart_contract/: Cargo.toml
programs/usdfg_smart_contract/src/: lib.rs
public/: _redirects
scripts/: audit-challenge-uid-drift.mjs  audit-wallet-firestore.mjs  dead-code-report.mjs  fetch-challenge-audit.mjs  (+7 more)
(+349 files in other folders)
