[package]
name = "usdfg_smart_contract"
version = "0.1.0"
description = "USDFG Gaming Challenge Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "usdfg_smart_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18.0"
spl-token = "4.0.0"
borsh = "0.10.3"

